# mosef_cours

./: pyproject.toml
src/cours/cli/: cli_afficher_message_a_l_ecran_en_majuscule.py  cli_fabriquer_voiture.py
src/cours/domain/afficher_message/: afficher_message_a_l_ecran_en_majuscule.py
src/cours/domain/linter_et_formatteur/: script_a_l_arrache.py
src/cours/domain/usine_et_voiture/usine/: usine.py
src/cours/domain/usine_et_voiture/voitures/: voiture.py  voiture_decapotable.py  voiture_electrique.py  voiture_interface.py
src/preprocessing_et_entrainement_modele/cli/: cli_entrainement_modele.py
src/preprocessing_et_entrainement_modele/infrastructure/: recuperation_donnees_titanic.py
